<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignIn">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtBusinessNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Business Number"
            android:inputType="number"
            android:textColor="#E20000"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:text=""
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"/>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:text=""
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:text=""
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.rey.material.widget.CheckBox
                android:id="@+id/ckbRemember"
                style="@style/Material.Drawable.CheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Remember me"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnSignIn"
        android:text="@string/SignIn"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:fButtonColor="@color/btnSignActive"
        app:cornerRadius="4dp"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />

</RelativeLayout>