<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetail">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimaryDark"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
            <!--app:title="Food Name"/>-->

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.andremion.counterfab.CounterFab
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:elevation="6dp"
        android:src="@drawable/ic_shopping_cart_black_24dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end"
        app:pressedTranslationZ="12dp"
        app:useCompatPadding="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:elevation="6dp"
        android:src="@drawable/ic_star_full_48dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|start"
        app:pressedTranslationZ="12dp"
        app:useCompatPadding="true"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/food_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:padding="12dp"
                        android:text="@string/food_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:id="@+id/layout_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_weight="0"
                            android:src="@drawable/shekel"
                            android:layout_marginEnd="5dp"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:id="@+id/food_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:text="@string/_1000"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                        android:id="@+id/number_button"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="18dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        app:backGroundColor="@color/colorAccent"
                        app:finalNumber="20"
                        app:initialNumber="1"
                        app:textSize="5sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:max="5"
                        android:rating="0"/>
                    <TextView
                        android:id="@+id/food_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="@string/description"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <info.hoang8f.widget.FButton
                android:id="@+id/btnShowComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/show_comment"
                android:textColor="@android:color/white"
                app:fButtonColor="@color/colorPrimary"
                fbutton:cornerRadius="4dp"
                fbutton:shadowColor="@android:color/black"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
